Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret

---------------------------
  Jackdmp changes log
---------------------------

2008-06-20 Stephane Letz  <letz@grame.fr>

	* Add new jack_client_stop_thread and jack_client_kill_thread API.

2008-06-19 Stephane Letz  <letz@grame.fr>

	* Embed JackEngineControl in JackDriver (starting from Tim Blechmann idea).

2008-06-18 Stephane Letz  <letz@grame.fr>

	* On OSX waf now compiles Universal Binaries.

2008-06-17 Stephane Letz  <letz@grame.fr>

	* Driver class hierarchy simplification.
	* Update waf for compilation on OSX.

2008-06-13 Stephane Letz  <letz@grame.fr>

	* Correct JackPosixThread::ThreadHandler termination, do not set buffer size if same value is used.
	* Another Tim Blechmann cleanup patch + do no allocate JackClientControl in shared memory for server internal clients.

2008-06-12 Stephane Letz  <letz@grame.fr>

	* Another Tim Blechmann patch to remove unnecessary virtual methods.

2008-06-09 Stephane Letz  <letz@grame.fr>

	* Improve net driver so that jack clients can be registered even if driver has not yet started. 

2008-06-08 Stephane Letz  <letz@grame.fr>

	* Add a missing EXPORT for JackException class. 

2008-06-06 Stephane Letz  <letz@grame.fr>

	* Better error checking in JackGraphManager::RemoveAllPorts.

2008-06-05 Stephane Letz  <letz@grame.fr>

	* Better control of exported symbols.
	* Fix a bug in backend parameter parsing.

2008-06-04 Stephane Letz  <letz@grame.fr>

	* Merge of network branch.
	* Use of set_threaded_log_function only when needed in RT threads.

2008-06-02 Stephane Letz  <letz@grame.fr>

	* Tim Blechmann patch to remove unnecessary virtual methods : choice of the appropriate platform version is now done at compilation time.

2008-06-02 Stephane Letz  <letz@grame.fr>

	* Cleanup and correct wscript for example-clients.